# glimpse-tauri

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
design/: .impeccable.md  BUGFIX-PLAN.md  BUILD-AUDIT-TODO.md  CHAT-COMPONENT-SPEC.md  CHAT-SIZING-HOTFIX.md  CHAT-SIZING-SPEC.md  DEBUG-PERMISSIONS.md  DESIGN-SPEC-v2.md  DESIGN-SPEC.md  FIXES-ROUND2.md  FIXES-ROUND3.md  FIXES-ROUND4.md  ICON-SPEC.md  PERFORMANCE-PLAN.md  POLISH-AUDIT.md  WELCOME-STEP0-ANIM.md  pinned-colors-light.html  pinned-colors.html  pinned-metal-light.html
design/mockups/: annotation-colors.html  api-key-setup.html  attachment-cue.html  chat-header.html  chat.html  connected-chat-v2.html  copy-patterns.html  dark-theme.html  edit-toolbar.html  glimpsing-scan.html  glimpsing-v2.html  light-surfaces.html  logo-animation.html  logo-compare.html  logo-final-animations.html  pin-highlight.html  pinned-furrow.html  pinned-transition.html  pinned-v2.html  polish.html  settings.html  thinking-state.html  tokens.css  toolbar.html  welcome.html  (+7 more)
src/: ApiKeySetup.jsx  App.jsx  ChatOnlyApp.jsx  ChatPanel.jsx  DrawingCanvas.jsx  EditToolbar.jsx  HomeApp.jsx  ImageBoard.jsx  SettingsApp.jsx  WelcomeApp.jsx  app.css  main.jsx  tauri-shim.js  useThreadManager.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_mac.rs  windows.rs
src-tauri/src/capture/: screenshot.rs  windows.rs
src-tauri/src/commands/: ai.rs  mod.rs  permissions.rs  settings.rs  threads.rs
