[package]
name = "glimpse"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
base64 = "0.22"
xcap = "0.7"
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", version = "2.1.0" }
block2 = "0.6.2"

# Optimize dependencies even in dev mode (huge impact on image encoding speed)
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
tauri-build = { version = "2", features = [] }
